# sysmic-engine-cpp

./: .gitignore  CMakeLists.txt  README.md
libs/: CMakeLists.txt  main.cpp
libs/vision/: CMakeLists.txt
libs/vision/docs/: requirements.txt
libs/vision/include/: vision.hpp
libs/vision/src/: CMakeLists.txt  main.cpp  vision.cpp  vision.hpp
libs/vision/tools/: protobuf.bash
